--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 }
 body {
     font-family: 'Roboto', sans-serif;
+    background-image: url("images/patt.png");
+}
+.header {
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 25px 0;
 }
 .container {
     width: 1200px;
@@ -14,7 +19,7 @@ body {
     margin-left: -15px;
     margin-right: -15px;
 }
-.row::after {
+.row::after, .menu::after {
     content: "";
     display: block;
     clear: both;
@@ -28,5 +33,29 @@ body {
     width: 25%;
 }
 .col-md-6 {
-    width: 25%;
+    width: 50%;
+}
+.logo {
+    margin-top: 8px;
+}
+.menu li{
+ width: 25%;
+ float: left;
+ border-left: 1px solid #2c71b8;
+}
+.menu li:last-child {
+    border-right: 1px solid #2c71b8;
+}
+.menu a {
+    text-decoration: none;
+    display: block;
+    height: 50px;
+    line-height: 50px;
+    color: #2c71b8;
+    font-size: 21px;
+    text-align: center;
+}
+.menu a:hover{
+    color: white;
+    background-color: #2c71b8;
 }
