--- a/style.css
+++ b/style.css
@@ -59,3 +59,16 @@ body {
     color: white;
     background-color: #2c71b8;
 }
+.shop-icon {
+    float: right;
+    background-color: white;
+}
+.shop-icon > a {
+    display: block;
+padding: 9px 11px;
+}
+.search {
+    border: 1px solid #2c71b8;
+    float: left;
+    position: relative;
+}
