--- a/style.css
+++ b/style.css
@@ -62,13 +62,36 @@ body {
 .shop-icon {
     float: right;
     background-color: white;
+    margin-top: 6px;
 }
 .shop-icon > a {
     display: block;
 padding: 9px 11px;
 }
 .search {
+    margin-top: 5px;
+    width: 200px;
+    height: 40px;
     border: 1px solid #2c71b8;
     float: left;
-    position: relative;
+}
+.search > input {
+    margin-top: 9px;
+    margin-left: 20px;
+    display: inline-block;
+    width: 100px
+}
+.search > input::placeholder {
+    font-size: 21px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #2c71b8;
+    font-weight: lighter;
+}
+.button {
+    margin-top: 4px;
+    margin-right: 5px;
+    margin-bottom: 4px;
+    float: right;
+    padding: 7px 8px;
+    background-color: #2c71b8;
 }
