--- a/style.css
+++ b/style.css
@@ -75,13 +75,14 @@ padding: 9px 11px;
     border: 1px solid #2c71b8;
     float: left;
 }
-.search > input {
+.input-search {
     margin-top: 9px;
     margin-left: 20px;
     display: inline-block;
-    width: 100px
+    width: 100px;
+    background: transparent;
 }
-.search > input::placeholder {
+.input-search::placeholder {
     font-size: 21px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #2c71b8;
