--- a/style.css
+++ b/style.css
@@ -1,51 +1,64 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Roboto', sans-serif;
     background-image: url("images/patt.png");
 }
+
 .header {
     background-color: rgba(255, 255, 255, 0.75);
     padding: 25px 0;
 }
+
 .container {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
+
 .row {
     margin-left: -15px;
     margin-right: -15px;
 }
-.row::after, .menu::after {
+
+.row::after,
+.menu::after {
     content: "";
     display: block;
     clear: both;
 }
+
 [class*="col-"] {
     float: left;
     padding-left: 15px;
     padding-right: 15px;
 }
-.col-md-3{ 
+
+.col-md-3 {
     width: 25%;
 }
+
 .col-md-6 {
     width: 50%;
 }
+
 .logo {
     margin-top: 8px;
 }
-.menu li{
- width: 25%;
- float: left;
- border-left: 1px solid #2c71b8;
+
+.menu li {
+    width: 25%;
+    float: left;
+    border-left: 1px solid #2c71b8;
 }
+
 .menu li:last-child {
     border-right: 1px solid #2c71b8;
 }
+
 .menu a {
     text-decoration: none;
     display: block;
@@ -55,19 +68,23 @@ body {
     font-size: 21px;
     text-align: center;
 }
-.menu a:hover{
+
+.menu a:hover {
     color: white;
     background-color: #2c71b8;
 }
+
 .shop-icon {
     float: right;
     background-color: white;
     margin-top: 6px;
 }
-.shop-icon > a {
+
+.shop-icon>a {
     display: block;
-padding: 9px 11px;
+    padding: 9px 11px;
 }
+
 .search {
     margin-top: 5px;
     width: 200px;
@@ -75,24 +92,31 @@ padding: 9px 11px;
     border: 1px solid #2c71b8;
     float: left;
 }
+
 .input-search {
     margin-top: 9px;
     margin-left: 20px;
     display: inline-block;
-    width: 100px;
+    width: 120px;
     background: transparent;
 }
+
 .input-search::placeholder {
     font-size: 21px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #2c71b8;
     font-weight: lighter;
 }
+
 .button {
     margin-top: 4px;
     margin-right: 5px;
     margin-bottom: 4px;
     float: right;
-    padding: 7px 8px;
+    width: 30px;
+    height: 30px;
     background-color: #2c71b8;
+    background-image: url("images/search.png");
+    background-repeat: no-repeat;
+    background-position: center;
 }
