--- a/style.css
+++ b/style.css
@@ -74,15 +74,31 @@ body {
     background-color: #2c71b8;
 }
 
-.shop-icon {
+.cart {
     float: right;
     background-color: white;
-    margin-top: 6px;
+    margin-top: 5px;
+    position: relative;
 }
-
-.shop-icon>a {
+.number {
+    position: absolute;
+    background-color: #2c71b8;
+    color: white;
+    border-radius: 10px;
+    font-size: 12px;
+    font-weight: 500;
+    width: 20px;
+    height: 20px;
+    top: 0;
+    text-align: center;
+    line-height: 20px;
+    margin-left: -10px;
+    margin-top: -10px;
+}
+.shop-icon {
     display: block;
     padding: 9px 11px;
+    max-height: 40px;
 }
 
 .search {
@@ -94,21 +110,21 @@ body {
 }
 
 .input-search {
-    margin-top: 9px;
+    margin-top: 6px;
     margin-left: 20px;
     display: inline-block;
-    width: 120px;
+    width: 140px;
     background: transparent;
 }
 
-.input-search::placeholder {
+.input-search, .input-search::placeholder {
     font-size: 21px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #2c71b8;
-    font-weight: lighter;
 }
 
 .button {
+    cursor: pointer;
     margin-top: 4px;
     margin-right: 5px;
     margin-bottom: 4px;
