--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     margin-top: 8px;
 }
 
-.menu li {
+.menu > li {
     width: 25%;
     float: left;
     border-left: 1px solid #2c71b8;
@@ -59,7 +59,7 @@ body {
     border-right: 1px solid #2c71b8;
 }
 
-.menu a {
+.menu a, .drop-content a {
     text-decoration: none;
     display: block;
     height: 50px;
@@ -135,4 +135,32 @@ body {
     background-image: url("images/search.png");
     background-repeat: no-repeat;
     background-position: center;
+}
+.drop-menu {
+    position: relative;
+}
+.drop-menu:hover .drop-content {
+    opacity: 1;
+    visibility: visible;
+}
+.drop-content {
+    position: absolute;
+    margin-left: -1px;
+    opacity: 0;
+    visibility: hidden;
+}
+.drop-content li {
+    width: 286px;
+}
+.drop-content a {
+background-color: #2c71b8;
+color: white;
+height: 40px;
+line-height: 40px;
+padding-left: 30px;
+text-align: left;
+}
+.drop-content a:hover {
+    color: #2c71b8;
+    background-color: white;
 }
