--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     text-align: center;
 }
 
-.menu a:hover {
+.menu a:hover, .drop-menu:hover a {
     color: white;
     background-color: #2c71b8;
 }
