--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ line-height: 40px;
     background-color: #2c71b8;
 }
 .sorter:hover .hidden-sorter{
+    z-index: 10;
     opacity: 1;
     visibility: visible;
 }
@@ -237,10 +238,28 @@ line-height: 40px;
     height: 180px;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
 }
 .img-monitor {
     background-image: url("images/monitor.png");
-    position: relative;
+}
+.img-tv{
+    background-image: url("images/tv.png");
+}
+.img-watches {
+    background-image: url("images/watches.png");
+}
+.img-laptop {
+    background-image: url("images/laptop.png");
+}
+.img-tablet {
+    background-image: url("images/tablet.png");
+}
+.img-ipod {
+    background-image: url("images/ipod.png");
+}
+.img-iphone {
+    background-image: url("images/iphone.png");
 }
 .button-size, .button-favorite {
     position: absolute;
@@ -285,6 +304,10 @@ right: 0;
 }
 .bold{
     font-weight: 700;
+}
+.up-align{
+    font-size: 24px;
+    vertical-align: super;
 }
 .product-price{
     padding-top: 25px;
