--- a/style.css
+++ b/style.css
@@ -375,10 +375,18 @@ label:before {
     height: 10px;
     border: 1px solid white;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 30px;
+    position: relative;
 }
 input[type="checkbox"]:checked + label:before {
 background-color: white;
+}
+.checkbox-text {
+    position: absolute;
+    margin-left: 20px;
+    margin-top: -17px;
+    cursor: pointer;
+    font-weight: 300;
 }
 .show-more a{
     display: block;
